# avalanche-os

./: .gitignore  CLAUDE.md  DEVPLAN.md  avalanche-apps.ks  avalanche-branding.ks  avalanche-colorscheme.ks  avalanche-console.ks  avalanche-effects.ks  avalanche-grub.ks  avalanche-identity.ks  avalanche-livesys.ks  avalanche-terminal.ks  avalanche-update.ks  avalanche-widget.ks  avalanche.ks  build.sh  fedora-kde-common.ks  fedora-live-base.ks  fedora-live-kde.ks  fedora-live-minimization.ks  fedora-repo.ks  kitty.conf  vm-rebuild.sh
assets/: README.md
kwin/avalanchedestroy/: CMakeLists.txt  avalanchedestroy.cpp  avalanchedestroy.h  avalanchedestroy.kcfg  avalanchedestroyconfig.kcfgc  main.cpp  metadata.json
kwin/avalanchedestroy/code/: main.js
plasma/snowupdate/: avalanche-snowfall-autostart.desktop  avalanche-snowfall.desktop  metadata.json
plasma/snowupdate/contents/ui/: main.qml
plasma/snowwatch/: metadata.json
plasma/snowwatch/contents/config/: config.qml  main.xml
plasma/snowwatch/contents/ui/: ConfigPage.qml  main.qml
plymouth/: avalanche.plymouth  avalanche.script
scripts/: avalanche-update-check  avalanche-update-run  gen-bootsplash-ks.py  gen-branding-ks.py  gen-effects-ks.py  gen-grub-ks.py  gen-terminal-ks.py  gen-update-ks.py
